[package]
name = "glsl-include"
version = "0.1.0"
authors = ["Justin Shrake <justinshrake@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A library for expanding #include directives in GLSL source strings"
repository = "https://github.com/jshrake/glsl-include"
keywords = ["glsl-include", "glsl", "opengl"]
categories = ["parsing", "rendering::data-formats"]
readme = "README.md"
include = ["src/*.rs","Cargo.toml","README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[badges]
travis-ci = { repository = "jshrake/glsl-include" }

[dependencies]
regex = "0.2"
lazy_static = "1.0.0"
criterion = { version = "0.2", optional = true } # for cargo bench

[dev-dependencies]
indoc = "0.2"

[features]
default = []
benches = ["criterion"]

[[bench]]
name = "mod"
harness = false
