[package]
name = "glsl-include"
version = "0.3.1"
authors = ["Justin Shrake <justinshrake@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A library for expanding #include directives in GLSL source strings"
repository = "https://github.com/jshrake/glsl-include"
documentation = "https://docs.rs/glsl-include/"
keywords = ["glsl-include", "glsl", "opengl"]
categories = ["parsing", "rendering::data-formats"]
readme = "README.md"
include = ["src/*.rs","Cargo.toml","README.md", "LICENSE-APACHE", "LICENSE-MIT"]
edition = "2018"

[badges]
travis-ci = { repository = "jshrake/glsl-include" }
appveyor = { repository = "jshrake/glsl-include" }

[dependencies]
regex = "1"
lazy_static = "1.3.0"

[dev-dependencies]
indoc = "0.3"
criterion = "0.2"

[[bench]]
name = "mod"
harness = false
